@@ -1,13 +1,12 @@
 package likelion.univ.domain.post.service;
 
 import likelion.univ.domain.post.adaptor.PostAdaptor;
-import likelion.univ.domain.post.dto.PostServiceDTO;
+import likelion.univ.domain.post.dto.*;
 import likelion.univ.domain.post.entity.Post;
 import likelion.univ.domain.post.entity.enums.MainCategory;
 import likelion.univ.domain.post.entity.enums.SubCategory;
 import likelion.univ.domain.post.exception.PostNoAuthorizationException;
 import lombok.RequiredArgsConstructor;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
@@ -20,16 +19,18 @@ public class PostService{
     private final PostAdaptor postAdaptor;
 
 
-    public PostServiceDTO.ResponseDTO createPost(PostServiceDTO.CreateRequest request) {
+    public PostSimpleResponseDto createPost(PostCreateServiceDto request) {
         Post post = createEntity(request);
-        postAdaptor.save(post);
-        return PostServiceDTO.ResponseDTO.builder().id(post.getId()).build();
+        Long savedId = postAdaptor.save(post);
+        return PostSimpleResponseDto.builder()
+                .postId(savedId)
+                .build();
     }
 
-    public List<PostServiceDTO.Retrieve> retrievePostPaging(Integer page, Integer limit) {
-        List<Post> posts= postAdaptor.retrievePostPaging(page,limit);
+    public List<PostDetailResponseDto> findPosts(Integer page, Integer limit) {
+        List<Post> posts= postAdaptor.findPosts(page,limit);
         return posts.stream()
-                .map(post -> PostServiceDTO.Retrieve.builder()
+                .map(post -> PostDetailResponseDto.builder()
                         .id(post.getId())
                         .authorId(post.getAuthor().getId())
                         .author(post.getAuthor().getProfile().getName())
@@ -39,19 +40,21 @@ public class PostService{
                         .mainCategory(post.getMainCategory())
                         .subCategory(post.getSubCategory())
                         .build())
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    public PostServiceDTO.ResponseDTO editPost(PostServiceDTO.EditRequest request) {
+    public PostSimpleResponseDto editPost(PostUpdateServiceDto request) {
         Post post = postAdaptor.findById(request.getPostId());
         if (!(post.getAuthor().getId().equals(request.getUserId()))) {
             throw new PostNoAuthorizationException();
         }
         post.edit(request);
-        postAdaptor.save(post);
-        return PostServiceDTO.ResponseDTO.builder().id(post.getId()).build();
+        Long savedId = postAdaptor.save(post);
+        return PostSimpleResponseDto.builder()
+                .postId(savedId)
+                .build();
     }
-    public void deletePost(PostServiceDTO.DeleteRequest request) {
+    public void deletePost(PostDeleteServiceDto request) {
         Post post = postAdaptor.findById(request.getPostId());
         if (!(post.getAuthor().getId().equals(request.getUserId()))) {
             throw new PostNoAuthorizationException();
@@ -60,7 +63,7 @@ public class PostService{
         return;
     }
 
-    private static Post createEntity(PostServiceDTO.CreateRequest request) {
+    private static Post createEntity(PostCreateServiceDto request) {
         return  Post.builder()
                 .author(request.getUser())
                 .title(request.getTitle())
